--- a/Howeasyy 1.0/App.config
+++ b/Howeasyy 1.0/App.config
@@ -102,7 +102,7 @@
             <setting name="n" serializeAs="String">
                 <value>Blue</value>
             </setting>
-            <setting name="Database" serializeAs="Xml">
+            <setting name="DatabaseHost" serializeAs="Xml">
                 <value>
                     <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
                         <string>162.240.40.248</string>
@@ -119,6 +119,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Renci.SshNet" publicKeyToken="1cee9f8bde3db106" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2020.0.1.0" newVersion="2020.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
