--- a/Howeasyy 1.0/packages.config
+++ b/Howeasyy 1.0/packages.config
@@ -5,11 +5,23 @@
   <package id="CefSharp.Common" version="97.1.61" targetFramework="net472" />
   <package id="CefSharp.WinForms" version="97.1.61" targetFramework="net472" />
   <package id="CefSharp.Wpf" version="97.1.61" targetFramework="net472" />
+  <package id="chilkat-x64" version="9.5.0.93" targetFramework="net472" />
+  <package id="CSScreenRecorder" version="1.0.7" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="5.15.4" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.19.4" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net452" />
   <package id="Microsoft.ReportViewer.VS2015.WinForms" version="12.0.2.2402" targetFramework="net452" />
   <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.31" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="Renci.SshNet.Async" version="1.4.0" targetFramework="net452" />
   <package id="SoftwareProtector" version="1.0.5.1" targetFramework="net472" />
   <package id="SSH.NET" version="2020.0.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
 </packages>
