--- a/Howeasyy 1.0/Howeasyy 1.0.vbproj
+++ b/Howeasyy 1.0/Howeasyy 1.0.vbproj
@@ -105,6 +105,14 @@
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Release\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.9.0.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
       <HintPath>packages\Portable.BouncyCastle.1.9.0\lib\net40\BouncyCastle.Crypto.dll</HintPath>
@@ -167,6 +175,9 @@
     <Reference Include="Microsoft.VisualBasic.Compatibility" />
     <Reference Include="MySql.Data, Version=8.0.31.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>packages\MySql.Data.8.0.31\lib\net452\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -346,6 +357,8 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Howeasyy AI\_class\CommandsCode.vb" />
+    <Compile Include="_Class\Api\lib\Utils.vb" />
+    <Compile Include="_Class\Api\Request.vb" />
     <Compile Include="_Class\Class1.vb" />
     <Compile Include="_Class\Popup.vb">
       <SubType>Component</SubType>
@@ -771,6 +784,8 @@
     <None Include="Resources\Untitled-%281%29 %281%291.png" />
     <None Include="Resources\backicon.png" />
     <None Include="Resources\reloadicon.png" />
+    <None Include="Resources\logp.png" />
+    <None Include="Resources\logo.png" />
     <Content Include="Software Protector.exe" />
     <Content Include="Untitled-_1_.ico" />
     <Content Include="untitled__1__P6o_icon.ico" />
