--- a/Howeasyy 1.0/packages.config
+++ b/Howeasyy 1.0/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.ReportViewer.VS2015.WinForms" version="12.0.2.2402" targetFramework="net452" />
   <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.31" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="Renci.SshNet.Async" version="1.4.0" targetFramework="net452" />
   <package id="SoftwareProtector" version="1.0.5.1" targetFramework="net472" />
