--- a/Howeasyy 1.0/packages.config
+++ b/Howeasyy 1.0/packages.config
@@ -12,6 +12,7 @@
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net452" />
   <package id="Microsoft.ReportViewer.VS2015.WinForms" version="12.0.2.2402" targetFramework="net452" />
   <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net452" />
@@ -19,10 +20,22 @@
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="Renci.SshNet.Async" version="1.4.0" targetFramework="net452" />
+  <package id="RestSharp" version="108.0.3" targetFramework="net472" />
   <package id="SoftwareProtector" version="1.0.5.1" targetFramework="net472" />
   <package id="SSH.NET" version="2020.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="5.0.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
